# random-task

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  rng.rs
src/snapshots/: random_task__test__build_nested_task_list__works_for_arbitrary_nesting.snap  random_task__test__build_nested_task_list__works_for_empty_input.snap  random_task__test__build_nested_task_list__works_for_multiple_nested_sections.snap  random_task__test__build_nested_task_list__works_for_single_nesting.snap
