[package]
name = "random-task"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
rand = "0.9.0"

[dev-dependencies]
insta = "1.42.1"
mockall = "0.13.1"
mockall_double = "0.3.1"


[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = { version = "0.9.0", default-features = false, features = ["small_rng"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
# console_error_panic_hook = "0.1.7"
# web-sys = { version = "0.3.46", features = ["console"] }
# wee_alloc = "0.4"
[profile.release]
lto = true
